--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.0",
     "@emotion/server": "^11.4.0",
-    "@emotion/styled": "^11.8.1",
-    "@mui/material": "^5.6.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "moment": "^2.29.2",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
