--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.8",
+    "@emotion/cache": "^11.9.3",
+    "@emotion/react": "^11.10.0",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/material": "^5.9.3",
     "next": "12.2.2",
-    "postcss": "^8.4.14",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "^3.1.7"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.0.5",
