--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "typewriter-effect": "^2.20.1"
   },
   "devDependencies": {
     "daisyui": "^3.0.22"
