--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.2.6",
+    "@prisma/client": "^4.16.2",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
-    "firebase": "^9.22.2",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -24,10 +23,16 @@
     "react-icons": "^4.9.0",
     "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3",
     "typewriter-effect": "^2.20.1"
   },
   "devDependencies": {
-    "daisyui": "^3.0.22"
+    "@types/node": "^20.4.1",
+    "daisyui": "^3.0.22",
+    "prisma": "^4.16.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
